objects/wkdw__OnboardingTemplate__c.object
<CustomObject>
    <description>Custom object that enables an HR agent to create a list of tasks that will help a new employee transition through the organization.</description>
    <fields>
        <fullName>wkdw__Description__c</fullName>
        <description>A brief description about the template.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__PlanOwner__c</fullName>
        <description>If Plan Owner is desired, enter the Queue ID.</description>
        <inlineHelpText>If Plan Owner is desired, enter the Queue ID.</inlineHelpText>
        <label>Plan Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__TransitionType__c</fullName>
        <label>Transition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Job Change</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__WelcomeText__c</fullName>
        <description>The description that employees see at the top of their transition checklist.</description>
        <inlineHelpText>The description that employees see at the top of their transition checklist.</inlineHelpText>
        <label>Welcome Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Transition Plan Template</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>